overflow fix

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   
   body {
     font-family: sans-serif;
-    overflow: hidden;
+    overflow-x: hidden;
   }
 
   header {
